syntax = "proto3";
package kira.staking;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/timestamp.proto";
import "kira/staking/proposal.proto";
import "kira/staking/staking.proto";

option go_package = "github.com/KiraCore/sekai/x/staking/types";

// Msg defines the staking Msg service.
service Msg {
  // ClaimValidator defines a method for claiming a new validator.
  rpc ClaimValidator(MsgClaimValidator) returns (MsgClaimValidatorResponse);
}

message MsgClaimValidator {
  option (gogoproto.equal) = true;

  string moniker = 1;
  bytes val_key = 2 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.ValAddress",
    (gogoproto.moretags) = "yaml:\"val_key\""
  ];
  google.protobuf.Any pub_key = 3 [
    (cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey",
    (gogoproto.moretags) = "yaml:\"pub_key\""
  ];
}

// MsgClaimValidatorResponse defines the Msg/ClaimValidator response type.
message MsgClaimValidatorResponse {}
